borsh/tests/snapshots/test_vecs__vec_f32-2.snap
---
source: borsh/tests/test_vecs.rs
expression: buf
---
[
    1,
    0,
    0,
    0,
    40,
    107,
    110,
    78,
]
