borsh/tests/snapshots/test_vecs__vec_f32-3.snap
---
source: borsh/tests/test_vecs.rs
expression: buf
---
[
    10,
    0,
    0,
    0,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
    40,
    107,
    110,
    78,
]
