borsh/tests/snapshots/test_vecs__vec_i8-3.snap
---
source: borsh/tests/test_vecs.rs
expression: buf
---
[
    10,
    0,
    0,
    0,
    100,
    100,
    100,
    100,
    100,
    100,
    100,
    100,
    100,
    100,
]
