borsh/tests/snapshots/test_vecs__vec_u32-4.snap
---
source: borsh/tests/test_vecs.rs
expression: buf
---
[
    100,
    0,
    0,
    0,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
    0,
    202,
    154,
    59,
]
