borsh/tests/snapshots/test_vecs__vec_vec_u32-2.snap
---
source: borsh/tests/test_vecs.rs
expression: buf
---
[
    1,
    0,
    0,
    0,
    10,
    0,
    0,
    0,
    100,
    0,
    0,
    0,
    100,
    0,
    0,
    0,
    100,
    0,
    0,
    0,
    100,
    0,
    0,
    0,
    100,
    0,
    0,
    0,
    100,
    0,
    0,
    0,
    100,
    0,
    0,
    0,
    100,
    0,
    0,
    0,
    100,
    0,
    0,
    0,
    100,
    0,
    0,
    0,
]
